<resources>
    <string name="app_name">Github User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="github_user">GITHUB USERS</string>
    <string name="search">Search</string>
    <string name="detail">DETAIL USER</string>
    <string name="profile">Profile</string>
    <string name="img_profile">Image Profile</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="search_not_found">User tidak ditemukan!</string>
    <string name="search_hint">Cari User?</string>
    <string name="search_message">Cari User</string>
    <string name="splash">Splash</string>
    <string name="setting">Setting</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="username">Andi Hasan Ashari</string>
    <string name="name">Nama User</string>
    <string name="favorite">Favorite</string>
    <string name="theme">Theme</string>
    <string name="ic_darkmode">Icon Dark Mode</string>
    <string name="darkmode">Mode Gelap</string>
</resources>